[package]
name = "pixelflut-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
log = { version = "^0.4.17", features = ["std"] }
simple_logger = "4.2.0"
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"
resvg = "0.37.0"
